@@ -1,3 +1,8 @@
+2017-10-10  Oliver Kiddle  <opk@zsh.org>
+
+	* 41835: Src/Zle/complete.c: handle multibyte characters with
+	compset -p and -s
+
 2017-10-10  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* uposted, c.f. 41846: Completion/Unix/Command/_expand ->
